--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -182,7 +182,7 @@ footer {
 
 @media (max-width: 1000px) {
 	.section-text {
-		width: 90vw;
+		width: 100vw;
 	}
 }
 
